--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "mermaid": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "spectacle": "^10.1.6"
