--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mermaid": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reactflow": "^11.8.3",
     "spectacle": "^10.1.6"
   },
   "devDependencies": {
