--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,5 +26,5 @@ jobs:
       - name: gh pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrects.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dist
